common/force-app/main/default/objects/Active_Founder_Products__c/Active_Founder_Products__c.object-meta.xml
<CustomObject>
    <label>Active Founder Products</label>
    <nameField>
        <label>Active Founder Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Founder Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>