common/force-app/main/default/objects/Active_Founder_Products__c/fields/Product_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Activation_Date__c</fullName>
    <label>Product Activation Date</label>
    <type>DateTime</type>
</CustomField>