common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Founder Products (Related Business Account)</relationshipLabel>
    <relationshipName>Active_Founder_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>