common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_EOI__c.field-meta.xml
<CustomField>
    <fullName>Related_EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Active Founder Products</relationshipLabel>
    <relationshipName>Active_Founder_Products</relationshipName>
    <type>Lookup</type>
</CustomField>