common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_Founder_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Founder_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Founder Campaign</label>
    <referenceTo>Founder_Campaign__c</referenceTo>
    <relationshipLabel>Active Founder Products</relationshipLabel>
    <relationshipName>Active_Founder_Products</relationshipName>
    <type>Lookup</type>
</CustomField>