common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Active Founder Products</relationshipLabel>
    <relationshipName>Active_Founder_Products</relationshipName>
    <type>Lookup</type>
</CustomField>