common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Founder Products</relationshipLabel>
    <relationshipName>Active_Founder_Products</relationshipName>
    <type>Lookup</type>
</CustomField>