common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Active Founder Products</relationshipLabel>
    <relationshipName>Active_Founder_Products</relationshipName>
    <type>Lookup</type>
</CustomField>