common/force-app/main/default/objects/Active_Founder_Products__c/fields/Related_Raise__c.field-meta.xml
<CustomField>
    <fullName>Related_Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Active Founder Products</relationshipLabel>
    <relationshipName>Active_Founder_Products</relationshipName>
    <type>Lookup</type>
</CustomField>