common/force-app/main/default/objects/Active_Founder_Products__c/recordTypes/Founder_Products.recordType-meta.xml
<RecordType>
    <fullName>Founder_Products</fullName>
    <active>true</active>
    <label>Founder Products</label>
</RecordType>